--- a/src/index.css
+++ b/src/index.css
@@ -49,11 +49,12 @@ h1 {
   filter: drop-shadow(0px 10px 3px var(--background));
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto auto auto;
   grid-template-areas: 
     "header header"
     "form form"
-    "footerSwitch footerButton";
+    "footerSwitch footerButton"
+    "footerForgotPassword .";
   transition: all 1s ease;
   animation: fadeInSweep ease .5s;
 }
@@ -150,6 +151,13 @@ h1 {
 
 .switch {
   grid-area: footerSwitch;
+  justify-self: left;
+  margin-left: 30%;
+  cursor:pointer;
+}
+
+.forgot-password {
+  grid-area: footerForgotPassword;
   justify-self: left;
   margin-left: 30%;
   cursor:pointer;
